--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/TGGameTrying.github.io.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/TGGameTrying.github.io.data.br",
-        frameworkUrl: buildUrl + "/TGGameTrying.github.io.framework.js.br",
-        codeUrl: buildUrl + "/TGGameTrying.github.io.wasm.br",
+        dataUrl: buildUrl + "/TGGameTrying.github.io.data",
+        frameworkUrl: buildUrl + "/TGGameTrying.github.io.framework.js",
+        codeUrl: buildUrl + "/TGGameTrying.github.io.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "TGGame",
